src/components/storyblok/BlokProjectSlider/BlokProjectSlider.module.sass
.projectSlider
  position: relative
  width: 100%
  height: 100%
  padding: var(--spacing-base) var(--spacing-side)

.item
  position: absolute
  top: var(--spacing-base)
  left: var(--spacing-side)
  width: calc(100% - (var(--spacing-side) * 2))
  display: flex
  flex-direction: column
  gap: 0.4545454546rem // 10px for 22px font size
  opacity: 1
  visibility: hidden
  z-index: 0
  pointer-events: none
  &[data-active='true']
    visibility: visible
    z-index: 1
    pointer-events: auto

.image
  position: relative
  width: 100%
  aspect-ratio: 16 / 9
  overflow: hidden
  :global(mux-player), :global(.muxPlayer)
    aspect-ratio: 16 / 9 !important
    object-fit: cover !important
  @media (orientation: portrait)
    aspect-ratio: 3 / 2
    :global(mux-player), :global(.muxPlayer)
      aspect-ratio: 3 / 2 !important
  img, video, :global(mux-player)
    position: absolute
    top: 0
    left: 0
    width: 100%
    height: 100% !important
    object-fit: cover

.imageWrapper
  position: relative
  width: 100%
  height: 100%

.indicatorAnchor
  position: absolute
  top: var(--spacing-base)
  left: var(--spacing-side)
  width: calc(100% - (var(--spacing-side) * 2))
  aspect-ratio: 16 / 9
  pointer-events: none
  z-index: 2
  transition: top var(--transition-theme)
  @media (orientation: portrait)
    aspect-ratio: 3 / 2

.tapTarget
  position: absolute
  inset: 0
  z-index: 11
  pointer-events: auto
  @media (hover: hover) and (pointer: fine)
    display: none

.caption
  display: flex
  align-items: center

.captionTitle
  flex-grow: 1
  padding-right: var(--spacing-side)

.progressWrapper
  position: relative
  width: 2rem
  height: var(--border-hyperlink)
  overflow: hidden
  @media (max-width: 770px)
    width: 1rem

.progress
  position: absolute
  left: 0
  bottom: 0
  width: 0%
  height: 100%
  background: currentColor
  z-index: 0
  will-change: width

.hoverZones
  position: absolute
  top: 0
  left: 0
  width: 100%
  height: 100%
  display: flex
  flex-direction: row
  pointer-events: auto
  z-index: 10
  @media (hover: none)
    pointer-events: none

.hoverZone
  position: relative
  height: 100%
  flex: 1
  pointer-events: auto
  @media (hover: none)
    pointer-events: none

